kustomize-units/firewall/management-cluster/allow-to-ingress.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-to-ingress
  namespace: kube-system
spec:
  selector: app.kubernetes.io/instance == 'rke2-ingress-nginx'
  order: 56
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: has(kubernetes.io/hostname)
        namespaceSelector: global()
      destination:
        ports:
        - 80
        - 443
    # all pods from all the namespaces can access the ingress
    # can be limited further to the actual pods that need access
    - action: Allow
      protocol: TCP
      source:
        selector: all()
        namespaceSelector: all()
      destination:
        ports:
        - 80
        - 443
