kustomize-units/firewall/management-cluster/cluster-creator-to-vip.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: cluster-creator-to-vip
spec:
  order: 40
  preDNAT: true
  applyOnForward: true
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: job-name == 'cluster-creator-login-flux-system'
    destination:
      nets:
      - ${CLUSTER_VIRTUAL_IP}
      ports:
      - 443
