kustomize-units/firewall/management-cluster/keycloak-realm-operator-to-vip.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: keycloak-realm-operator-to-vip
spec:
  order: 40
  preDNAT: true
  applyOnForward: true
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: name == 'keycloak-realm-operator'
    destination:
      nets:
      - ${CLUSTER_VIRTUAL_IP}
      ports:
      - 443
