kustomize-units/firewall/management-cluster/kustomize-to-vip.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: kustomize-to-vip
spec:
  order: 40
  preDNAT: true
  applyOnForward: true
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: app == 'kustomize-controller'
    destination:
      nets:
      - ${CLUSTER_VIRTUAL_IP}
      ports:
      - 443
