kustomize-units/firewall/management-cluster/vault-to-vip.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: vault-to-vip
spec:
  order: 40
  preDNAT: true
  applyOnForward: true
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: app.kubernetes.io/name == 'vault'
    destination:
      nets:
      - ${CLUSTER_VIRTUAL_IP}
      ports:
      - 443
